--- a/cmd/ui/templates/index.html
+++ b/cmd/ui/templates/index.html
@@ -75,7 +75,7 @@
             <p>
                 Try sorting 10,000 elements with both algorithms.
                 Bubble Sort will take several seconds while Merge Sort completes instantly.
-                At 50,000 elements, the difference is even more dramatic!
+                At 50,000 elements, the difference is even noticeable.
             </p>
             <div class="complexity">
                 <div>
